--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
         
-          node-version:"18.x"
+          node-version:'18.x'
       - run: npm install 
       - run: npm run build
       - run: echo "$(cat hello_world.txt)"
